force-app/main/default/objects/WorkBadgeDefinition/WorkBadgeDefinition.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>