force-app/main/default/objects/WorkBadgeDefinition/fields/ilms__Impact_Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__Impact_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impact Book</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipLabel>BookBadges</relationshipLabel>
    <relationshipName>BookBadges</relationshipName>
    <type>Lookup</type>
</CustomField>