force-app/main/default/objects/WorkBadgeDefinition/fields/ilms__Impact_Speciality__c.field-meta.xml
<CustomField>
    <fullName>ilms__Impact_Speciality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Impact</description>
    <label>Impact Speciality</label>
    <referenceTo>ilms__Speciality__c</referenceTo>
    <relationshipLabel>SpecialityBadges</relationshipLabel>
    <relationshipName>SpecialityBadges</relationshipName>
    <type>Lookup</type>
</CustomField>