force-app/main/default/objects/WorkBadgeDefinition/fields/ilms__Is_Impact__c.field-meta.xml
<CustomField>
    <fullName>ilms__Is_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Impact LMS Badge or not? All default badges are not Impact LMS Badges.</description>
    <label>Is Impact</label>
    <type>Checkbox</type>
</CustomField>